k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-jobs
spec:
  selector:
    matchLabels:
      app: traefik-jobs
  template:
    metadata:
      labels:
        app: traefik-jobs
    spec:
      serviceAccountName: traefik-jobs-sa
      containers:
        - name: traefik-jobs
          image: traefik/jobs
          ports:
            - containerPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-jobs
spec:
  selector:
    app: traefik-jobs
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-jobs
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-jobs
            port:
              number: 8888
